2024-12-16  dana  <dana@dana.is>

	* 53251: Completion/Unix/Command/_man: fix page completion on
	macOS, update fall-back paths, etc.

	* 52108: Doc/Zsh/compsys.yo: document benefits of `_normal -p`

2024-11-23  Oliver Kiddle  <opk@zsh.org>

	* Clinton Bunch: 53228: Etc/FAQ.yo: Remove references to
	Patches "Archive" from FAQ

	* github #122: Wu, Zhenyu: Completion/Unix/Command/_gcc: Add
	newer C and C++ language standards to gcc completion

	* github #123: Shlomi Fish: Completion/X/Command/_okular:
	Make okular's completion support *.epub files.

	* github #124: Ryan Rotter: Completion/Debian/Command/_dpkg:
	remove defunct --largemem, --smallmem options

	* 53243: Src/Zle/zle_hist.c: fix use of vi-fetch-history
	with a range

	* 53244: Test/Y01completion.ztst: rename user in test case to
	reduce likelihood of failure due to user existing

2024-11-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53238 (+53239 Mikael): Completion/Redhat/Command/_dnf,
	Completion/Redhat/Command/_dnf5: support dnf5

2024-11-12  Bart Schaefer  <schaefer@zsh.org>

	* Karel Balej: 53240, 53241: Completion/Unix/Command/_mpc:
	updated completions for mpc add, mpc insert

2024-11-12  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53137 + 53213: Doc/Makefile.in, Doc/intro.ms, allow creating
	intro.html

2024-11-11  Eric Cook  <llua@gmx.com>

	* 53144: Completion/Unix/Command/_sysctl:
	support completion with the dot delimiter on linux

	* Matthew Martin: 53174 + comments:
	Completion/Base/Utility/_as_if: complete `as if'
	a different command were being completed

2024-11-05  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53209 + comments + test: Src/params.c, Test/D04parameter.ztst:
	do not unmetafy via string pointers into global parameter table

2024-10-16  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53146: Src/exec.c: trace flags cannot be copied from an
	undefined function (cf. workers/45131)

2024-09-02  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
